--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -2,3 +2,96 @@
   min-height: 100vh;
   padding: 10rem 9% 2rem;
 }
+
+.home {
+  display: flex;
+  align-items: center;
+  padding: 0 9%;
+}
+
+.homeContent {
+  max-width: 60rem;
+}
+
+.homeContent h1 {
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 1.3;
+}
+
+.homeContent .textAnimate {
+  position: relative;
+  width: 32.8rem;
+}
+
+.homeContent .textAnimate h3 {
+  font-size: 3.3rem;
+  font-weight: 700;
+  color: transparent;
+  -webkit-text-stroke: .7px var(--main-color);
+}
+
+.homeContent p {
+  font-size: 1.6rem;
+  margin: 2rem 0 4rem;
+}
+
+.btnBox {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 34.5rem;
+  height: 5rem;
+}
+
+.btnBox .btn {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 100%;
+  background: var(--main-color);
+  border: .2rem solid var(--main-color);
+  border-radius: .8rem;
+  font-size: 1.8rem;
+  font-weight: 600;
+  letter-spacing: .1rem;
+  color: var(--bg-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.btnBox .btn:hover {
+  color: var(--main-color);
+}
+
+.btnBox .btn:nth-child(2) {
+  background: transparent;
+  color: var(--main-color);
+}
+
+.btn:nth-child(2):hover {
+  color: var(--bg-color);
+}
+
+.btnBox .btn:nth-child(2)::before {
+  background: var(--main-color);
+}
+
+.btnBox .btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--bg-color);
+  z-index: -1;
+  transition: .5s;
+}
+
+.btnBox .btn:hover::before {
+  width: 100%;
+}
