--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -30,7 +30,7 @@
   color: var(--main-color);
 }
 
-#menu-icon {
+.menuIcon {
   font-size: 3.6rem;
   color: var(--text-color);
   cursor: pointer;
