--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -7,6 +7,13 @@
   display: flex;
   align-items: center;
   padding: 0 9%;
+  /* background: url('../assets/screen.png'); */
+  /* background: url('../assets/note.png'); */
+  /* background: url('../assets/manos.png'); */
+  /* background: url('../assets/manosDark.png'); */
+  background: url('../assets/fondoYo.png');
+  background-size: cover;
+  background-position: center;
 }
 
 .homeContent {
@@ -94,4 +101,64 @@
 
 .btnBox .btn:hover::before {
   width: 100%;
+}
+
+.homeSci {
+  position: absolute;
+  bottom: 4rem;
+  width: 170px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.homeSci a {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  border: .2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 20px;
+  color: var(--main-color);
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.homeSci a:hover {
+  color: var(--bg-color);
+}
+
+.homeSci a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--main-color);
+  z-index: -1;
+  transition: .5s;
+}
+
+.homeSci a:hover::before {
+  width: 100%;
+}
+
+.homeImgHover {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 45%;
+  height: 100%;
+  background: transparent;
+  transition: 3s;
+}
+
+.homeImgHover:hover {
+  background: var(--bg-color);
+  opacity: .8;
 }
