--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -9,6 +9,11 @@
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  transition: .3s;
+}
+
+.container .sticky {
+  background: yellowgreen;
 }
 
 .logo {
